--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= title %></title>
-  <%= stylesheet_link_tag 'blueprint/screen' :media => "screen" %>
+  <%= stylesheet_link_tag 'blueprint/screen', :media => "screen" %>
 <%= stylesheet_link_tag 'blueprint/print', :media => "print" %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
